generated/TurismoLangParser.py
# Generated from TurismoLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TurismoLangParser ( Parser ):

    grammarFileName = "TurismoLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'escena'", "'{'", "'}'", "'decir'", "';'", 
                     "'opcion'", "'ir_a'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_scene = 1
    RULE_dialogue = 2
    RULE_decir = 3
    RULE_opcion = 4

    ruleNames =  [ "program", "scene", "dialogue", "decir", "opcion" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    ID=8
    STRING=9
    WS=10
    COMMENT=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TurismoLangParser.EOF, 0)

        def scene(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TurismoLangParser.SceneContext)
            else:
                return self.getTypedRuleContext(TurismoLangParser.SceneContext,i)


        def getRuleIndex(self):
            return TurismoLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TurismoLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.scene()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 15
            self.match(TurismoLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SceneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TurismoLangParser.ID, 0)

        def dialogue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TurismoLangParser.DialogueContext)
            else:
                return self.getTypedRuleContext(TurismoLangParser.DialogueContext,i)


        def getRuleIndex(self):
            return TurismoLangParser.RULE_scene

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScene" ):
                listener.enterScene(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScene" ):
                listener.exitScene(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScene" ):
                return visitor.visitScene(self)
            else:
                return visitor.visitChildren(self)




    def scene(self):

        localctx = TurismoLangParser.SceneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scene)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(TurismoLangParser.T__0)
            self.state = 18
            self.match(TurismoLangParser.ID)
            self.state = 19
            self.match(TurismoLangParser.T__1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.dialogue()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==6):
                    break

            self.state = 25
            self.match(TurismoLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DialogueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decir(self):
            return self.getTypedRuleContext(TurismoLangParser.DecirContext,0)


        def opcion(self):
            return self.getTypedRuleContext(TurismoLangParser.OpcionContext,0)


        def getRuleIndex(self):
            return TurismoLangParser.RULE_dialogue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDialogue" ):
                listener.enterDialogue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDialogue" ):
                listener.exitDialogue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDialogue" ):
                return visitor.visitDialogue(self)
            else:
                return visitor.visitChildren(self)




    def dialogue(self):

        localctx = TurismoLangParser.DialogueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dialogue)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.decir()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.opcion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(TurismoLangParser.STRING, 0)

        def getRuleIndex(self):
            return TurismoLangParser.RULE_decir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecir" ):
                listener.enterDecir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecir" ):
                listener.exitDecir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecir" ):
                return visitor.visitDecir(self)
            else:
                return visitor.visitChildren(self)




    def decir(self):

        localctx = TurismoLangParser.DecirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(TurismoLangParser.T__3)
            self.state = 32
            self.match(TurismoLangParser.STRING)
            self.state = 33
            self.match(TurismoLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(TurismoLangParser.STRING, 0)

        def ID(self):
            return self.getToken(TurismoLangParser.ID, 0)

        def getRuleIndex(self):
            return TurismoLangParser.RULE_opcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcion" ):
                listener.enterOpcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcion" ):
                listener.exitOpcion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpcion" ):
                return visitor.visitOpcion(self)
            else:
                return visitor.visitChildren(self)




    def opcion(self):

        localctx = TurismoLangParser.OpcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_opcion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(TurismoLangParser.T__5)
            self.state = 36
            self.match(TurismoLangParser.STRING)
            self.state = 37
            self.match(TurismoLangParser.T__6)
            self.state = 38
            self.match(TurismoLangParser.ID)
            self.state = 39
            self.match(TurismoLangParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





